File Name: CHANGES

03/11/2015 FASP 1.6.9:
- Clean up some redundant code.
- Update regression test results.
- Fix problems in DEBUG MODE; add DEBUG output level.
- Fix relative residual print out bug in vFGMRES.

02/25/2015 FASP 1.6.8:
- Further clean up Doxygen.
- Unify output messages, fix several print problems.
- Fix multiple Doxgen problems.
- Fix a few warning in DEBUG compiler setting.
- TABs are changed to SPACEs: done!
- Clean up code for better style.
- Update developer information in Doxygen.
- Update block preconditioners.
- Update documentation and webpage.

02/06/2015 FASP 1.6.7:
- Remove ISTART, N2C, and C2N.
- Fix initial residual check for Krylov methods: check absolute and relative residuals.
- Add a safe-guard step in UA setup in order to avoid Divided-by-Zero.
- Fix a typo in automatic header generation.
- Clean up format a little bit.
- Initialize cycle_type in mgl[lvl], fix the bug in NA.
- Initialize ILU_levels in mgl[lvl], fix the bug when calling ILU in NA.
- Initialize Schwarz_levels in mgl[lvl].
- Update regression results, better convergence for NA now.

01/27/2015 FASP 1.6.6:
- Clean up the code and prepare for releasing the package.
- Clean up aggregation code.
- Clean up some error, warning, debug messages.
- Clean up comments and fix typos in the comments.
- Fix wrong warning messages in iterative methods.
- Remove unused variables. 
- Check Doxygen errors and messages.
- If cmake does not find Doxygen file, do not quit; just give warning.
- Do not archive VS08 any more; remove support to VS08 and earlier versions.
- Update Doxygen, documentation, and webpage.

01/13/2015 FASP 1.6.5:
- Rearrange multilevel cycles in nonlinear AMLI.
- Fix memory leakage in MUMPS interface.
- Modify INSTALL and README messages.
- Slightly change Makefile, especially the screen messages and optimal options.
- Reduce number of memory allocations in pairwise aggregation.
- Fix some false WARNINGs in iterative methods; more need to be changed.